# tincan

./: .ocamlformat  README.md  dune-project  tincan.install  tincan.opam
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/default/: server.dune-package  server.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: chat.cma  chat.cmxa  chat.cmxs  chat.ml-gen  server.ml  tui.ml  utils.ml
_build/default/lib/.chat.objs/: chat__Server.impl.all-deps  chat__Server.impl.d  chat__Tui.impl.all-deps  chat__Tui.impl.d  server.impl.d  tui.impl.all-deps  tui.impl.d  utils.impl.d
_build/default/lib/.chat.objs/byte/: chat.cmi  chat.cmo  chat.cmt  chat__Server.cmi  chat__Server.cmo  chat__Server.cmt  chat__Tui.cmi  chat__Tui.cmo  chat__Tui.cmt  chat__Utils.cmi  chat__Utils.cmo  chat__Utils.cmt  server.cmi  server.cmo  server.cmt  tui.cmi  tui.cmo  tui.cmt  utils.cmi  utils.cmo  utils.cmt
_build/default/lib/.chat.objs/native/: chat.cmx  chat__Server.cmx  chat__Tui.cmx  chat__Utils.cmx  server.cmx  tui.cmx  utils.cmx
_build/default/lib/.merlin-conf/: lib-chat
_build/default/test/: oUnit-TCP_server_tests.cache  oUnit-Terminal_UI_tests.cache  test_server.ml
_build/default/test/.merlin-conf/: exe-test_server
_build/default/test/.test_server.eobjs/byte/: dune__exe__Test_server.cmi  dune__exe__Test_server.cmti
_build/default/test/.test_server.eobjs/native/: dune__exe__Test_server.cmx
_build/install/default/lib/server/: META  dune-package  opam
lib/: dune  server.ml  tui.ml  utils.ml
test/: dune  test_server.ml
